--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Portafolio de Marlon M. Martínez Ebrath</title>
     <link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="lateral">
@@ -21,106 +23,78 @@
                 minus quasi quo ullam? Ad amet autem commodi consectetur earum
                 eveniet excepturi</p>
             <ul class="habilidades">
-                <li class="habilidad">Html 5</li>
-                <li class="habilidad">Css 3</li>
-                <li class="habilidad">Python</li>
-                <li class="habilidad">Django</li>
+                <li class="habilidad__proyecto">Html 5</li>
+                <li class="habilidad__proyecto">Css 3</li>
+                <li class="habilidad__proyecto">Python</li>
+                <li class="habilidad__proyecto">Django</li>
             </ul>
         </div>
     </section>
     <section class="proyectos">
-        <article class="proyectos">
-            <img src="img/proyecto1.jpg" alt="" class="proyecto_imagen">
-            <h3 class="proyecto_titulo">Proyecto 1</h3>
-            <p class="proyecto_descripcion">Lorem ipsum dolor sit
-                amet, consectetur adipisicing elit. Accusantium commodi culpa id
-                minus quasi quo ullam? Ad amet autem commodi consectetur earum
-                eveniet excepturi fugit in magnam non, possimus quis recusandae
-                sit tempore ut veniam, voluptatum! Accusamus aliquid, autem
-                consectetur cum dolorem, eum facere fuga itaque magni maiores
-                molestiae numquam officia, perspiciatis placeat porro possimus
-                quae quasi reiciendis totam ut? Adipisci aspernatur consectetur
-                ducimus excepturi harum, hic, minus necessitatibus placeat quaerat
-                quo rerum, sapiente soluta voluptas! Ad alias commodi debitis
-                facere libero modi molestiae praesentium provident qui, rerum
-                sequi veniam vitae? Alias deserunt dolorum facere iste neque
-                quam quas temporibus!</p>
-            <ul class="habilidades">
-                <li class="habilidad">Html 5</li>
-                <li class="habilidad">Css 3</li>
-                <li class="habilidad">Python</li>
-                <li class="habilidad">Django</li>
-            </ul>
-        </article>
-        <article class="proyectos">
-            <img src="img/proyecto1.jpg" alt="" class="proyecto_imagen">
-            <h3 class="proyecto_titulo">Proyecto 1</h3>
-            <p class="proyecto_descripcion">Lorem ipsum dolor sit
-                amet, consectetur adipisicing elit. Accusantium commodi culpa id
-                minus quasi quo ullam? Ad amet autem commodi consectetur earum
-                eveniet excepturi fugit in magnam non, possimus quis recusandae
-                sit tempore ut veniam, voluptatum! Accusamus aliquid, autem
-                consectetur cum dolorem, eum facere fuga itaque magni maiores
-                molestiae numquam officia, perspiciatis placeat porro possimus
-                quae quasi reiciendis totam ut? Adipisci aspernatur consectetur
-                ducimus excepturi harum, hic, minus necessitatibus placeat quaerat
-                quo rerum, sapiente soluta voluptas! Ad alias commodi debitis
-                facere libero modi molestiae praesentium provident qui, rerum
-                sequi veniam vitae? Alias deserunt dolorum facere iste neque
-                quam quas temporibus!</p>
-            <ul class="habilidades">
-                <li class="habilidad">Html 5</li>
-                <li class="habilidad">Css 3</li>
-                <li class="habilidad">Python</li>
-                <li class="habilidad">Django</li>
-            </ul>
-        </article>
-        <article class="proyectos">
-            <img src="img/proyecto1.jpg" alt="" class="proyecto_imagen">
-            <h3 class="proyecto_titulo">Proyecto 1</h3>
-            <p class="proyecto_descripcion">Lorem ipsum dolor sit
-                amet, consectetur adipisicing elit. Accusantium commodi culpa id
-                minus quasi quo ullam? Ad amet autem commodi consectetur earum
-                eveniet excepturi fugit in magnam non, possimus quis recusandae
-                sit tempore ut veniam, voluptatum! Accusamus aliquid, autem
-                consectetur cum dolorem, eum facere fuga itaque magni maiores
-                molestiae numquam officia, perspiciatis placeat porro possimus
-                quae quasi reiciendis totam ut? Adipisci aspernatur consectetur
-                ducimus excepturi harum, hic, minus necessitatibus placeat quaerat
-                quo rerum, sapiente soluta voluptas! Ad alias commodi debitis
-                facere libero modi molestiae praesentium provident qui, rerum
-                sequi veniam vitae? Alias deserunt dolorum facere iste neque
-                quam quas temporibus!</p>
-            <ul class="habilidades">
-                <li class="habilidad">Html 5</li>
-                <li class="habilidad">Css 3</li>
-                <li class="habilidad">Python</li>
-                <li class="habilidad">Django</li>
-            </ul>
-        </article>
-        <article class="proyectos">
-            <img src="img/proyecto1.jpg" alt="" class="proyecto_imagen">
-            <h3 class="proyecto_titulo">Proyecto 1</h3>
-            <p class="proyecto_descripcion">Lorem ipsum dolor sit
-                amet, consectetur adipisicing elit. Accusantium commodi culpa id
-                minus quasi quo ullam? Ad amet autem commodi consectetur earum
-                eveniet excepturi fugit in magnam non, possimus quis recusandae
-                sit tempore ut veniam, voluptatum! Accusamus aliquid, autem
-                consectetur cum dolorem, eum facere fuga itaque magni maiores
-                molestiae numquam officia, perspiciatis placeat porro possimus
-                quae quasi reiciendis totam ut? Adipisci aspernatur consectetur
-                ducimus excepturi harum, hic, minus necessitatibus placeat quaerat
-                quo rerum, sapiente soluta voluptas! Ad alias commodi debitis
-                facere libero modi molestiae praesentium provident qui, rerum
-                sequi veniam vitae? Alias deserunt dolorum facere iste neque
-                quam quas temporibus!</p>
-            <ul class="habilidades">
-                <li class="habilidad">Html 5</li>
-                <li class="habilidad">Css 3</li>
-                <li class="habilidad">Python</li>
-                <li class="habilidad">Django</li>
-            </ul>
-        </article>
+        <div class="row">
+            <article class="proyecto">
+                <img src="img/proyecto1.jpg" alt="" class="proyecto_imagen">
+                <h3 class="proyecto_titulo">Proyecto 1</h3>
+                <p class="proyecto_descripcion">Lorem ipsum dolor sit
+                    amet, consectetur adipisicing elit. Accusantium commodi culpa id
+                    minus quasi quo ullam? Ad amet autem commodi consectetur earum
+                    eveniet excepturi fugit in magnam non, possimus quis recusandae
+                    sit tempore ut veniam, voluptatum! Accusamus aliquid</p>
+                <ul class="habilidades">
+                    <li class="habilidad__proyecto">Html 5</li>
+                    <li class="habilidad__proyecto">Css 3</li>
+                    <li class="habilidad__proyecto">Python</li>
+                    <li class="habilidad__proyecto">Django</li>
+                </ul>
+            </article>
+            <article class="proyecto">
+                <img src="img/proyecto2.jpg" alt="" class="proyecto_imagen">
+                <h3 class="proyecto_titulo">Proyecto 2</h3>
+                <p class="proyecto_descripcion">Lorem ipsum dolor sit
+                    amet, consectetur adipisicing elit. Accusantium commodi culpa id
+                    minus quasi quo ullam? Ad amet autem commodi consectetur earum
+                    eveniet excepturi fugit in magnam non, possimus quis recusandae
+                    sit tempore ut veniam, voluptatum! Accusamus aliquid</p>
+                <ul class="habilidades">
+                    <li class="habilidad__proyecto">Html 5</li>
+                    <li class="habilidad__proyecto">Css 3</li>
+                    <li class="habilidad__proyecto">Python</li>
+                    <li class="habilidad__proyecto">Django</li>
+                </ul>
+            </article>
+        </div>
+        <div class="row">
+            <article class="proyecto">
+                <img src="img/proyecto3.jpg" alt="" class="proyecto_imagen">
+                <h3 class="proyecto_titulo">Proyecto 3</h3>
+                <p class="proyecto_descripcion">Lorem ipsum dolor sit
+                    amet, consectetur adipisicing elit. Accusantium commodi culpa id
+                    minus quasi quo ullam? Ad amet autem commodi consectetur earum
+                    eveniet excepturi fugit in magnam non, possimus quis recusandae
+                    sit tempore ut veniam, voluptatum! Accusamus aliquid</p>
+                <ul class="habilidades">
+                    <li class="habilidad__proyecto">Html 5</li>
+                    <li class="habilidad__proyecto">Css 3</li>
+                    <li class="habilidad__proyecto">Python</li>
+                    <li class="habilidad__proyecto">Django</li>
+                </ul>
+            </article>
+            <article class="proyecto">
+                <img src="img/proyecto4.jpg" alt="" class="proyecto_imagen">
+                <h3 class="proyecto_titulo">Proyecto 4</h3>
+                <p class="proyecto_descripcion">Lorem ipsum dolor sit
+                    amet, consectetur adipisicing elit. Accusantium commodi culpa id
+                    minus quasi quo ullam? Ad amet autem commodi consectetur earum
+                    eveniet excepturi fugit in magnam non, possimus quis recusandae
+                    sit tempore ut veniam, voluptatum! Accusamus aliquid</p>
+                <ul class="habilidades">
+                    <li class="habilidad__proyecto">Html 5</li>
+                    <li class="habilidad__proyecto">Css 3</li>
+                    <li class="habilidad__proyecto">Python</li>
+                    <li class="habilidad__proyecto">Django</li>
+                </ul>
+            </article>
+        </div>
     </section>
 </body>
 </html>
